--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snippets",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,21 +10,26 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
-    "@prisma/client": "^5.8.1",
-    "next": "14.0.4",
-    "prisma": "^5.8.1",
-    "react": "^18",
-    "react-dom": "^18"
+    "@prisma/client": "^6.1.0",
+    "@tailwindcss/postcss": "^4.1.7",
+    "next": "15.3.2",
+    "prisma": "^6.1.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.5",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "eslint": "^9",
+    "eslint-config-next": "15.3.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.4",
+    "@types/react-dom": "19.1.5"
   }
 }
